--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -1318,7 +1318,7 @@ jobs:
         - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "TAG_COMMIT_SHA=$REPO_COMMIT" "TAG_IMG=$REL_VER"
 
 ######################### GCP U14 Image ##################################
-  - name: prep_u14_x8664_d113_gce_img
+  - name: prep_u14_x8664_d113_k313_gce_img
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
@@ -1363,14 +1363,16 @@ jobs:
                 - ARCHITECTURE: "x86_64"
                 - OS: "Ubuntu_14.04"
                 - DOCKER_VER: "1.13"
-                - MODIFY_KERNEL: "false"
+                - MODIFY_KERNEL: "true"
+                - KERNEL_VER: "3.13.0-153"
           script:
             - set -o pipefail
             - |
                export IMG_VER=$REL_VER
                export REL_VER_DASH=${REL_VER//./-}
                DOC_VER_DASH=${DOCKER_VER//./-}
-               export FAM_NAME=$REL_VER_DASH"-"$DOC_VER_DASH"-patch-u14-x86-64"
+               KERNEL_VER_DASH=${KERNEL_VER//./-}
+               export FAM_NAME=$REL_VER_DASH"-"$DOC_VER_DASH"-"$KERNEL_VER_DASH"-patch-u14-x86-64"
             - |
                TAR_FILENAME=$(shipctl get_resource_version_key "$NODE_RES" "TAR_FILENAME")
                WEB_URL=$(shipctl get_resource_version_key "$NODE_RES" "WEB_URL")
@@ -1386,18 +1388,94 @@ jobs:
     on_success:
       script:
         - shipctl put_resource_state_multi $JOB_NAME "versionName=$IMAGE_NAME" "IMAGE_NAME=$IMAGE_NAME" "IMAGE_FAM_NAME=$FAM_NAME" "REL_VER=$REL_VER"
-        - shipctl put_resource_state_multi $JOB_NAME "ARCHITECTURE=$ARCHITECTURE" "OS=$OS" "DOCKER_VER=$DOCKER_VER" "NODE_WEB_URL=$WEB_URL" "NODE_TAR_FILENAME=$TAR_FILENAME"
+        - shipctl put_resource_state_multi $JOB_NAME "ARCHITECTURE=$ARCHITECTURE" "OS=$OS" "DOCKER_VER=$DOCKER_VER" "KERNEL_VER=$KERNEL_VER" "NODE_WEB_URL=$WEB_URL" "NODE_TAR_FILENAME=$TAR_FILENAME"
         - shipctl copy_file_to_state images.txt
     on_failure:
       script:
         - cat output.txt
 
-  - name: patch_u14_x8664_d113_gce_img
+  - name: prep_u14_x8664_d113_k319_gce_img
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
     steps:
-      - IN: prep_u14_x8664_d113_gce_img
+      - IN: trig_gcp_img_prep
+      - IN: u14nodall_dd_img
+      - IN: u14pytall_dd_img
+      - IN: u14cloall_dd_img
+      - IN: u14golall_dd_img
+      - IN: u14scaall_dd_img
+      - IN: u14ruball_dd_img
+      - IN: u14phpall_dd_img
+      - IN: u14cppall_dd_img
+      - IN: u16cppall_dd_img
+      - IN: u16phpall_dd_img
+      - IN: u16ruball_dd_img
+      - IN: u16scaall_dd_img
+      - IN: u16golall_dd_img
+      - IN: u16cloall_dd_img
+      - IN: u16pytall_dd_img
+      - IN: u16nodall_dd_img
+      - IN: u16javall_dd_img
+      - IN: node_file_pack
+      - IN: buildami_repo
+        switch: off
+      - IN: ship_bits_gcp
+        switch: off
+      - TASK:
+          name: build_gce_image
+          runtime:
+            options:
+              env:
+                - NODE_RES: "node_file_pack"
+                - SOURCE_IMAGE_FAMILY: "ubuntu-1404-lts"
+                - MACHINE_TYPE: "n1-standard-8"
+                - REGION: "us-east1"
+                - ZONE: "us-east1-b"
+                - PROJECT_ID: "ship-bits"
+                - SERVICE_ACCOUNT_JSON: "gcp_key.json"
+                - REL_VER: "master"
+                - SSH_USER: "root"
+                - ARCHITECTURE: "x86_64"
+                - OS: "Ubuntu_14.04"
+                - DOCKER_VER: "1.13"
+                - MODIFY_KERNEL: "true"
+                - KERNEL_VER: "3.19.0-80"
+          script:
+            - set -o pipefail
+            - |
+               export IMG_VER=$REL_VER
+               export REL_VER_DASH=${REL_VER//./-}
+               DOC_VER_DASH=${DOCKER_VER//./-}
+               KERNEL_VER_DASH=${KERNEL_VER//./-}
+               export FAM_NAME=$REL_VER_DASH"-"$DOC_VER_DASH"-"$KERNEL_VER_DASH"-patch-u14-x86-64"
+            - |
+               TAR_FILENAME=$(shipctl get_resource_version_key "$NODE_RES" "TAR_FILENAME")
+               WEB_URL=$(shipctl get_resource_version_key "$NODE_RES" "WEB_URL")
+               export NODE_DOWNLOAD_URL="$WEB_URL/$REL_VER/$TAR_FILENAME"
+            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/$ARCHITECTURE/$OS/prep
+            - echo $(shipctl get_integration_resource_field ship_bits_gcp JSON_key) > $SERVICE_ACCOUNT_JSON
+            - cp -R ../../../templates/linux/* .
+            - cp -R ../../../templates/prep/* .
+            - shipctl replace vars.json
+            - packer validate -var-file=vars.json packer.json
+            - packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
+            - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
+    on_success:
+      script:
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=$IMAGE_NAME" "IMAGE_NAME=$IMAGE_NAME" "IMAGE_FAM_NAME=$FAM_NAME" "REL_VER=$REL_VER"
+        - shipctl put_resource_state_multi $JOB_NAME "ARCHITECTURE=$ARCHITECTURE" "OS=$OS" "DOCKER_VER=$DOCKER_VER" "KERNEL_VER=$KERNEL_VER" "NODE_WEB_URL=$WEB_URL" "NODE_TAR_FILENAME=$TAR_FILENAME"
+        - shipctl copy_file_to_state images.txt
+    on_failure:
+      script:
+        - cat output.txt
+
+  - name: patch_u14_x8664_d113_k313_gce_img
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: prep_u14_x8664_d113_k313_gce_img
       - IN: u14reqProc_dd_img
       - IN: u14repLib_x8664_build
       - IN: reqKick_file_pack
@@ -1411,7 +1489,7 @@ jobs:
           runtime:
             options:
               env:
-                - BASE_IMG_RES: "prep_u14_x8664_d113_gce_img"
+                - BASE_IMG_RES: "prep_u14_x8664_d113_k313_gce_img"
                 - REQPROC_RES: "u14reqProc_dd_img"
                 - REPORTS_RES: "u14repLib_x8664_build"
                 - REQKICK_RES: "reqKick_file_pack"
@@ -1429,12 +1507,94 @@ jobs:
                export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
                export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
                export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
+               export KERNEL_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "KERNEL_VER")
+               KERNEL_VER_DASH=${KERNEL_VER//./-}
                export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
                export NODE_WEB_URL=$(shipctl get_resource_version_key "$BASE_IMG_RES" "NODE_WEB_URL")
                export NODE_TAR_FILENAME=$(shipctl get_resource_version_key "$BASE_IMG_RES" "NODE_TAR_FILENAME")
                export REL_VER_DASH=${REL_VER//./-}
                DOC_VER_DASH=${DOCKER_VER//./-}
-               export FAM_NAME=$REL_VER_DASH"-"$DOC_VER_DASH"-patch-u14-x86-64"
+               export FAM_NAME=$REL_VER_DASH"-"$DOC_VER_DASH"-"$KERNEL_VER_DASH"-patch-u14-x86-64"
+            - |
+               REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_RES" "sourceName")
+               REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
+               export REQPROC_IMAGE="$REQPROC_REG:$REQPROC_TAG"
+            - |
+               REP_TAR_FILENAME=$(shipctl get_resource_version_key "$REPORTS_RES" "TAR_FILENAME")
+               REP_WEB_URL=$(shipctl get_resource_version_key "$REPORTS_RES" "WEB_URL")
+               export REPORTS_DOWNLOAD_URL="$REP_WEB_URL/$REL_VER/$REP_TAR_FILENAME"
+            - |
+               KICK_TAR_FILENAME=$(shipctl get_resource_version_key "$REQKICK_RES" "TAR_FILENAME")
+               KICK_WEB_URL=$(shipctl get_resource_version_key "$REQKICK_RES" "WEB_URL")
+               export REQKICK_DOWNLOAD_URL="$KICK_WEB_URL/$REL_VER/$KICK_TAR_FILENAME"
+            - |
+               CEXEC_TAR_FILENAME=$(shipctl get_resource_version_key "$CEXEC_RES" "TAR_FILENAME")
+               CEXEC_WEB_URL=$(shipctl get_resource_version_key "$CEXEC_RES" "WEB_URL")
+               export CEXEC_DOWNLOAD_URL="$CEXEC_WEB_URL/$REL_VER/$CEXEC_TAR_FILENAME"
+            - pushd $(shipctl get_resource_state "buildami_repo")/gcp/$ARCHITECTURE/$OS/patch
+            - cp -R ../../../templates/linux/* .
+            - cp -R ../../../templates/patch/* .
+            - shipctl copy_file_from_resource_state "$BASE_IMG_RES" "images.txt" .
+            - echo $(shipctl get_integration_resource_field "ship_bits_gcp" "JSON_key") > $SERVICE_ACCOUNT_JSON
+            - shipctl replace vars.json
+            - packer validate -var-file=vars.json packer.json
+            - packer build -machine-readable -var-file=vars.json packer.json 2>&1 | tee output.txt
+            - export IMAGE_NAME=$(cat output.txt | awk -F, '$0 ~/artifact,0,id/ {print $6}' | cut -d':' -f 2)
+    on_success:
+      script:
+        - shipctl put_resource_state_multi $JOB_NAME "versionName=$IMAGE_NAME" "IMAGE_NAME=$IMAGE_NAME" "IMAGE_FAM_NAME=$FAM_NAME" "REL_VER=$REL_VER" "ARCHITECTURE=$ARCHITECTURE" "OS=$OS" "DOCKER_VER=$DOCKER_VER"
+        - shipctl put_resource_state_multi $JOB_NAME "NODE_WEB_URL=$NODE_WEB_URL" "NODE_TAR_FILENAME=$NODE_TAR_FILENAME"  "REPORTS_WEB_URL=$REP_WEB_URL" "REPORTS_TAR_FILENAME=$REP_TAR_FILENAME"
+        - shipctl put_resource_state_multi $JOB_NAME "REQKICK_WEB_URL=$KICK_WEB_URL" "REQKICK_TAR_FILENAME=$KICK_TAR_FILENAME" "CEXEC_WEB_URL=$CEXEC_WEB_URL" "CEXEC_TAR_FILENAME=$CEXEC_TAR_FILENAME"
+        - shipctl copy_file_to_state images.txt
+    on_failure:
+      script:
+        - cat output.txt
+
+  - name: patch_u14_x8664_d113_k319_gce_img
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: prep_u14_x8664_d113_k319_gce_img
+      - IN: u14reqProc_dd_img
+      - IN: u14repLib_x8664_build
+      - IN: reqKick_file_pack
+      - IN: cexec_file_pack
+      - IN: buildami_repo
+        switch: off
+      - IN: ship_bits_gcp
+        switch: off
+      - TASK:
+          name: patch_u14_gce_image
+          runtime:
+            options:
+              env:
+                - BASE_IMG_RES: "prep_u14_x8664_d113_k319_gce_img"
+                - REQPROC_RES: "u14reqProc_dd_img"
+                - REPORTS_RES: "u14repLib_x8664_build"
+                - REQKICK_RES: "reqKick_file_pack"
+                - CEXEC_RES: "cexec_file_pack"
+                - MACHINE_TYPE: "n1-standard-8"
+                - REGION: "us-east1"
+                - ZONE: "us-east1-b"
+                - PROJECT_ID: "ship-bits"
+                - SERVICE_ACCOUNT_JSON: "gcp_key.json"
+                - SSH_USER: "root"
+          script:
+            - set -o pipefail
+            - |
+               REL_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "REL_VER")
+               export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
+               export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
+               export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
+               export KERNEL_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "KERNEL_VER")
+               KERNEL_VER_DASH=${KERNEL_VER//./-}
+               export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
+               export NODE_WEB_URL=$(shipctl get_resource_version_key "$BASE_IMG_RES" "NODE_WEB_URL")
+               export NODE_TAR_FILENAME=$(shipctl get_resource_version_key "$BASE_IMG_RES" "NODE_TAR_FILENAME")
+               export REL_VER_DASH=${REL_VER//./-}
+               DOC_VER_DASH=${DOCKER_VER//./-}
+               export FAM_NAME=$REL_VER_DASH"-"$DOC_VER_DASH"-"$KERNEL_VER_DASH"-patch-u14-x86-64"
             - |
                REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_RES" "sourceName")
                REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -1538,7 +1698,7 @@ jobs:
     on_success:
       script:
         - shipctl put_resource_state_multi $JOB_NAME "versionName=$IMAGE_NAME" "IMAGE_NAME=$IMAGE_NAME" "IMAGE_FAM_NAME=$FAM_NAME" "REL_VER=$REL_VER"
-        - shipctl put_resource_state_multi $JOB_NAME "ARCHITECTURE=$ARCHITECTURE" "OS=$OS" "DOCKER_VER=$DOCKER_VER" "NODE_WEB_URL=$WEB_URL" "NODE_TAR_FILENAME=$TAR_FILENAME"
+        - shipctl put_resource_state_multi $JOB_NAME "ARCHITECTURE=$ARCHITECTURE" "OS=$OS" "DOCKER_VER=$DOCKER_VER" "KERNEL_VER=$KERNEL_VER" "NODE_WEB_URL=$WEB_URL" "NODE_TAR_FILENAME=$TAR_FILENAME"
         - shipctl copy_file_to_state images.txt
     on_failure:
       script:
@@ -1639,14 +1799,14 @@ jobs:
         switch: off
       - IN: ship_bits_gcp
         switch: off
-      - IN: patch_u14_x8664_d113_gce_img
+      - IN: patch_u14_x8664_d113_k319_gce_img
         switch: off
       - TASK:
           name: build_gce_image
           runtime:
             options:
               env:
-                - BASE_IMG_RES: "patch_u14_x8664_d113_gce_img"
+                - BASE_IMG_RES: "patch_u14_x8664_d113_k319_gce_img"
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -1731,14 +1891,14 @@ jobs:
         switch: off
       - IN: ship_bits_gcp
         switch: off
-      - IN: patch_u14_x8664_d113_gce_img
+      - IN: patch_u14_x8664_d113_k319_gce_img
         switch: off
       - TASK:
           name: build_gce_image
           runtime:
             options:
               env:
-                - BASE_IMG_RES: "patch_u14_x8664_d113_gce_img"
+                - BASE_IMG_RES: "patch_u14_x8664_d113_k319_gce_img"
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -1823,14 +1983,14 @@ jobs:
         switch: off
       - IN: ship_bits_gcp
         switch: off
-      - IN: patch_u14_x8664_d113_gce_img
+      - IN: patch_u14_x8664_d113_k313_gce_img
         switch: off
       - TASK:
           name: build_gce_image
           runtime:
             options:
               env:
-                - BASE_IMG_RES: "patch_u14_x8664_d113_gce_img"
+                - BASE_IMG_RES: "patch_u14_x8664_d113_k313_gce_img"
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -1915,14 +2075,14 @@ jobs:
         switch: off
       - IN: ship_bits_gcp
         switch: off
-      - IN: patch_u14_x8664_d113_gce_img
+      - IN: patch_u14_x8664_d113_k313_gce_img
         switch: off
       - TASK:
           name: build_gce_image
           runtime:
             options:
               env:
-                - BASE_IMG_RES: "patch_u14_x8664_d113_gce_img"
+                - BASE_IMG_RES: "patch_u14_x8664_d113_k313_gce_img"
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
@@ -2007,14 +2167,14 @@ jobs:
         switch: off
       - IN: ship_bits_gcp
         switch: off
-      - IN: patch_u14_x8664_d113_gce_img
+      - IN: patch_u14_x8664_d113_k313_gce_img
         switch: off
       - TASK:
           name: build_gce_image
           runtime:
             options:
               env:
-                - BASE_IMG_RES: "patch_u14_x8664_d113_gce_img"
+                - BASE_IMG_RES: "patch_u14_x8664_d113_k313_gce_img"
                 - NODE_RES: "node_repo_file_tag"
                 - REQPROC_RES: "u14reqProc_dd_tag"
                 - REQPROC_IMG_RES: "u14reqProc_dd_img"
