--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -1,7 +1,7 @@
 # 
 # Templates
 # 
-final_task_template: &final_task_template
+final_task_setup_template: &final_task_setup_template
   - set -o pipefail
   - |
       export REL_VER=$(shipctl get_resource_version_name "prod_release")
@@ -12,7 +12,6 @@ final_task_template: &final_task_template
       export ARCHITECTURE=$(shipctl get_resource_version_key "$BASE_IMG_RES" "ARCHITECTURE")
       export OS=$(shipctl get_resource_version_key "$BASE_IMG_RES" "OS")
       export DOCKER_VER=$(shipctl get_resource_version_key "$BASE_IMG_RES" "DOCKER_VER")
-      # export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
   - |
       REQPROC_REG=$(shipctl get_resource_version_key "$REQPROC_IMG_RES" "sourceName")
       REQPROC_TAG=$(shipctl get_resource_version_key "$REQPROC_RES" "versionName")
@@ -33,6 +32,8 @@ final_task_template: &final_task_template
       CEXEC_TAR_FILENAME=$(shipctl get_resource_version_key "$CEXEC_RES" "TAR_FILENAME")
       CEXEC_WEB_URL=$(shipctl get_resource_version_key "$CEXEC_RES" "WEB_URL")
       export CEXEC_DOWNLOAD_URL="$CEXEC_WEB_URL/$REL_VER/$CEXEC_TAR_FILENAME"
+
+final_task_build_template: &final_task_build_template
   - |
       pushd $(shipctl get_resource_state "buildami_repo")/gcp/$ARCHITECTURE/$OS/final
       cp -R ../../../templates/linux/* .
@@ -1536,7 +1537,8 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.3.4"
           script:
-            - *final_task_template
+            - *final_task_setup_template
+            - *final_task_build_template
     on_success:
       script:
         - *final_on_success_template
@@ -1584,7 +1586,8 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.4.4"
           script:
-            - *final_task_template
+            - *final_task_setup_template
+            - *final_task_build_template
     on_success:
       script:
         - *final_on_success_template
@@ -1632,7 +1635,60 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.5.4"
           script:
-            - *final_task_template
+            - *final_task_setup_template
+            - *final_task_build_template
+    on_success:
+      script:
+        - *final_on_success_template
+    on_failure:
+      script:
+        - *final_on_failure_template
+
+  - name: v664_u16_x8664_gce_img
+    type: runSh
+    dependencyMode: strict
+    triggerMode: parallel
+    steps:
+      - IN: node_repo_file_tag
+      - IN: cexec_repo_file_tag
+      - IN: u16repLib_x8664_tag
+      - IN: reqKick_repo_file_tag
+      - IN: u16reqProc_dd_tag
+      - IN: u16reqProc_dd_img
+        switch: off
+      - IN: buildami_repo
+        switch: off
+      - IN: prod_release
+        switch: off
+      - IN: ship_bits_gcp
+        switch: off
+      - IN: patch_u16_x8664_gce_img
+        switch: off
+      - TASK:
+          name: build_gce_image
+          runtime:
+            options:
+              env:
+                - BASE_IMG_RES: "patch_u16_x8664_gce_img"
+                - NODE_RES: "node_repo_file_tag"
+                - REQPROC_RES: "u16reqProc_dd_tag"
+                - REQPROC_IMG_RES: "u16reqProc_dd_img"
+                - REPORTS_RES: "u16repLib_x8664_tag"
+                - REQKICK_RES: "reqKick_repo_file_tag"
+                - CEXEC_RES: "cexec_repo_file_tag"
+                - MACHINE_TYPE: "n1-standard-8"
+                - REGION: "us-east1"
+                - ZONE: "us-east1-b"
+                - PROJECT_ID: "ship-bits"
+                - SERVICE_ACCOUNT_JSON: "gcp_key.json"
+                - SSH_USER: "root"
+                - IMG_VER: "v6.6.4"
+          script:
+            - *final_task_setup_template
+            # Build on top of patch as this is the first image getting built.
+            # TODO: Remove this once this has been built atleast once.
+            - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
+            - *final_task_build_template
     on_success:
       script:
         - *final_on_success_template
