--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -1,6 +1,6 @@
-# 
+#
 # Templates
-# 
+#
 final_task_setup_template: &final_task_setup_template
   - set -o pipefail
   - |
@@ -54,9 +54,9 @@ final_on_success_template: &final_on_success_template
 
 final_on_failure_template: &final_on_failure_template
   - cat output.txt
-# 
+#
 # Resources
-# 
+#
 resources:
   - name: c7baseami_params
     type: params
@@ -1245,6 +1245,37 @@ jobs:
             - pushd $(shipctl get_resource_state "buildami_repo")
             - cd c7Exec
             - ./execPackUpdate.sh c7_v654_update prod_release ami-09631c76 v654 ami_bits_access
+            - popd
+    on_failure:
+      - script: cat /build/IN/buildami_repo/gitRepo/c7Exec/output.txt
+
+  - name: c7_v664_update
+    type: runSh
+    dependencyMode: strict
+    triggerMode: parallel
+    steps:
+      - IN: buildami_repo
+        switch: off
+      - IN: prod_release
+        switch: off
+      - IN: baseami_params
+        switch: off
+      - IN: ami_bits_access
+        switch: off
+      - IN: execTemplates_repo_file_tag
+      - IN: node_repo_file_tag
+      - IN: cexec_repo_file_tag
+      - IN: reqExec_repo_tag
+      - IN: reqProc_repo_tag
+      - IN: c7repLib_x8664_tag
+      - IN: u14repLib_x8664_tag
+      - IN: u16repLib_x8664_tag
+      - IN: u16repLib_aarch64_tag
+      - TASK:
+          script:
+            - pushd $(shipctl get_resource_state "buildami_repo")
+            - cd c7Exec
+            - ./execPackUpdate.sh c7_v664_update prod_release ami-4a1d3035 v664 ami_bits_access
             - popd
     on_failure:
       - script: cat /build/IN/buildami_repo/gitRepo/c7Exec/output.txt
