--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -2470,9 +2470,8 @@ jobs:
                 - IMG_VER: "v6.6.4"
           script:
             - *final_task_setup_template
-            # Build on top of patch as this is the first image getting built.
-            # TODO: Remove this once this has been built atleast once.
-            - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
+            # Uncomment this if this is the very first time this image is getting built.
+            # - export SOURCE_IMAGE_FAMILY=$(shipctl get_resource_version_key "$BASE_IMG_RES" "IMAGE_FAM_NAME")
             - *final_task_build_template
 
     on_success:
