--- a/shippable.templates.yml
+++ b/shippable.templates.yml
@@ -11,7 +11,7 @@ setup_ssh_key_temp: &setup_ssh_key
       pushd integrations/ship_ssh
         chmod 600 ship_ssh_key
         ssh-add ship_ssh_key
-        GIT_SOURCE=$(shipctl get_resource_version_key "$RES_REPO" "sourceName")
+        GIT_SOURCE=$(shipctl get_resource_version_key "$$RES_REPO" "sourceName")
         git remote add up "git@github.com:"$GIT_SOURCE".git"
       popd
 
