--- a/shippable.templates.yml
+++ b/shippable.templates.yml
@@ -12,6 +12,7 @@ setup_ssh_key_temp: &setup_ssh_key
         chmod 600 ship_ssh_key
         ssh-add ship_ssh_key
         echo "$RES_REPO"
+        ls -atlh .
         GIT_SOURCE=$(shipctl get_resource_version_key "$RES_REPO" "sourceName")
         echo "$GIT_SOURCE"
         git remote add up "git@github.com:"$GIT_SOURCE".git"
