checkout the branch

--- a/shippable.templates.yml
+++ b/shippable.templates.yml
@@ -30,6 +30,7 @@ get_git_tags_temp: &get_git_tags
   - |
       REL_VER=$(shipctl get_resource_version_key "$RES_VER" "versionName")
       pushd $(shipctl get_resource_state "$RES_REPO")
+        git checkout master
         git pull --tags
         if git tag -d $REL_VER; then
           git push --delete up $REL_VER
