--- a/shippable.templates.yml
+++ b/shippable.templates.yml
@@ -6,6 +6,13 @@ setup_docker_img_temp: &setup_docker_img
       DH_PASS=$(shipctl get_integration_resource_field $RES_IMG "password")
       docker login -u $DH_USR_NAME -p $DH_PASS
 
+build_docker_img_temp: &build_docker_img
+  - |
+      pushd $(shipctl get_resource_state "$RES_REPO")
+        sudo docker build -t=$IMG_NAME:$REL_VER --pull .
+        sudo docker push $IMG_NAME:$REL_VER
+      popd
+
 setup_ssh_key_temp: &setup_ssh_key
   - |
       pushd integrations/ship_ssh
@@ -19,7 +26,6 @@ setup_ssh_key_temp: &setup_ssh_key
 
 tag_docker_img_temp: &tag_docker_img
   - |
-      REL_VER=$(shipctl get_resource_version_key "$RES_VER" "versionName")
       docker pull "$IMG_NAME:$IMG_TAG"
       docker tag "$IMG_NAME:$IMG_TAG" "$IMG_NAME:$REL_VER"
       docker push "$IMG_NAME:$REL_VER"
@@ -28,7 +34,6 @@ tag_docker_img_temp: &tag_docker_img
 
 get_git_tags_temp: &get_git_tags
   - |
-      REL_VER=$(shipctl get_resource_version_key "$RES_VER" "versionName")
       pushd $(shipctl get_resource_state "$RES_REPO")
         git checkout master
         git pull --tags
@@ -41,25 +46,20 @@ tag_git_repo_temp: &tag_git_repo
   - |
       pushd $(shipctl get_resource_state "$RES_REPO")
         git checkout master
-        REPO_COMMIT=$(shipctl get_resource_version_key "$RES_IMG" "IMG_REPO_COMMIT_SHA")
         git checkout $REPO_COMMIT
         git tag $REL_VER
         git push up $REL_VER
       popd
 
-build_docker_img_temp: &build_docker_img
-  - |
-      pushd $(shipctl get_resource_state "$RES_REPO")
-        sudo docker build -t=$IMG_NAME:$REL_VER --pull .
-        sudo docker push $IMG_NAME:$REL_VER
-      popd
-
 build_ship_assets_temp: &build_ship_assets
   - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_REPO" "shaData.commitSha")
+  - RES_IMG=$IMG_OUT
   - *setup_docker_img
   - *build_docker_img
 
 tag_ship_assets_temp: &tag_ship_assets
+  - REL_VER=$(shipctl get_resource_version_key "$RES_VER" "versionName")
+  - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_IMG" "IMG_REPO_COMMIT_SHA")
   - *setup_docker_img
   - *setup_ssh_key
   - *tag_docker_img
