cleaning up c7 build templates

--- a/images/aarch32/Ubuntu_16.04/shippable.yml
+++ b/images/aarch32/Ubuntu_16.04/shippable.yml
@@ -50,8 +50,7 @@ jobs:
       - OUT: u16_aarch32_dd_img
     on_success:
       script:
-        - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
-        - shipctl put_resource_state_multi $IMG_OUT "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT" "BUILD_NUMBER=$BUILD_NUMBER"
+        - *build_ship_assets_on_success
 
   - name: u16_aarch32_tag
     type: runSh
@@ -79,7 +78,7 @@ jobs:
             - *tag_ship_assets
     on_success:
       script:
-        - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "TAG_COMMIT_SHA=$REPO_COMMIT" "TAG_IMG=$REL_VER"
+        - *tag_ship_assets_on_success
 
   - name: u16microbase_aarch32_build
     type: runSh
@@ -103,8 +102,7 @@ jobs:
       - OUT: u16microbase_aarch32_dd_img
     on_success:
       script:
-        - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT"
-        - shipctl put_resource_state_multi $IMG_OUT "versionName=$REL_VER" "IMG_REPO_COMMIT_SHA=$REPO_COMMIT" "BUILD_NUMBER=$BUILD_NUMBER"
+        - *build_ship_assets_on_success
 
   - name: u16microbase_aarch32_tag
     type: runSh
@@ -130,4 +128,4 @@ jobs:
             - *tag_ship_assets
     on_success:
       script:
-        - shipctl put_resource_state_multi $JOB_NAME "versionName=$REL_VER" "TAG_COMMIT_SHA=$REPO_COMMIT" "TAG_IMG=$REL_VER"
+        - *tag_ship_assets_on_success
