--- a/images/x86_64/Ubuntu_14.04/shippable.yml
+++ b/images/x86_64/Ubuntu_14.04/shippable.yml
@@ -1295,7 +1295,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.3.2"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1343,7 +1343,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.4.1"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1391,7 +1391,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.5.1"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1439,7 +1439,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.6.1"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1487,7 +1487,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.7.3"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1535,7 +1535,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.8.2"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1583,7 +1583,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v5.10.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1631,7 +1631,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.1.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1679,7 +1679,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.2.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1727,7 +1727,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.3.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1775,7 +1775,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.4.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1823,7 +1823,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.5.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1871,7 +1871,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.6.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1919,7 +1919,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.7.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
