--- a/images/x86_64/Ubuntu_16.04/shippable.yml
+++ b/images/x86_64/Ubuntu_16.04/shippable.yml
@@ -952,7 +952,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.3.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1000,7 +1000,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.4.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1048,7 +1048,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.5.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1096,7 +1096,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.6.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
@@ -1144,7 +1144,7 @@ jobs:
                 - SSH_USER: "root"
                 - IMG_VER: "v6.7.4"
           script:
-            - *always_final
+            - *regular_final
     on_success:
       script:
         - *final_on_success_template
